Sat Mar 30 22:54:12 1996  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (SRCS): Removed crctest.c from the SRCS list, since
		it's only a test program and it confuses the Macintosh build.

Fri Oct  6 21:59:30 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (CFLAGS): Remove ##DOS!include of config/windows.in.
		config/windows.in is now included by wconfig.

Mon Sep 25 16:48:23 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in: Removed "foo:: foo-$(WHAT)" lines from the
		Makefile. 

Wed Sep 13 10:28:47 1995 Keith Vetter (keithv@fusion.com)

	* crc.c: put function prototype back in.

Fri Jul 7 16:10:52 EDT 1995	Paul Park	(pjpark@mit.edu)
	* crc.c - Use CRC32_CKSUM_LENGTH where appropriate.  Add checksum
		verifier procedure.

Wed Jun 21 10:51:33 1995    <tytso@rsx-11.mit.edu>

	* crc.c: Change PROTOTYPE -> KRB5_PROTOTYPE

Fri Jun  9 19:18:36 1995    <tytso@rsx-11.mit.edu>

	* configure.in: Remove standardized set of autoconf macros, which
		are now handled by CONFIG_RULES.

Thu May 25 22:15:49 1995  Theodore Y. Ts'o  (tytso@dcl)

	* configure.in, Makefile.in: Add support for shared libraries.

Thu Apr 13 15:49:16 1995 Keith Vetter (keithv@fusion.com)

	* *.[ch]: removed unneeded INTERFACE from non-api functions.
        * *.h added FAR to pointers visible at to the world.

Thu Mar 16 21:14:15 1995  John Gilmore  (gnu at toad.com)

	* Makefile.in (crctest, crctest.exe):  Replace crctest-unix and
	crctest-windows with versions that work for Mac too.
	(check):  Build and run crctest$(EXEEXT).  This runs on MPW now.

Tue Mar 14 17:20:47 1995 Keith Vetter (keithv@fusion.com)

	* crc.c: removed method for pulling in a data structure (windows),
           and turned an int into a size_t for corrected 'signed'ness.

Fri Mar 3 19:01:59 1995 Keith Vetter (keithv@fusion.com)

	* crc.c: added a method to pull in a data structure 
           from outside a dll.

Thu Mar 2 17:48:08 1995 Keith Vetter (keithv@fusion.com)

	* Makefile.in: changed LIBNAME for the PC